cluster/apps/networking/external-services/robo/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app valetudo
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: 192.168.1.51
    ports:
      - port: 80
        name: http
